Surefire enable-preview via command line